# fastAPI-CRUD

./: .env.example  .env.test.local  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.github/workflows/: format.yml  tests.yml
alembic/: env.py
alembic/versions/: dca99e392f6d_initial_migration.py
app/: crud.py  database.py  init_db.py  main.py  schemas.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: feeds.py  items.py  login.py  users.py  utils.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
app/models/: __init__.py  item.py  user.py
app/schemas/: item.py  user.py
app/scripts/: format.sh
app/tests/: conftest.py
app/tests/api/api_v1/: test_users.py
app/tests/utils/: user.py
scripts/: format.sh  test.sh
