[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
gunicorn = "^21.0.1"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.7"
alembic = "^1.12.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
email-validator = "2.0.0.post2"
emails = "^0.6"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
autoflake = "^2.2.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.2"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"
